# Final_project

./: .env.example  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DB_VOICE_STRUCTURE.md  README.md  TODO_handover.md  architecture.html  patch_shebangs.sh  requirements.txt  robot-arm-project.md  run.sh
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
config/: 99-demo-cameras.rules  c270_camera_info.yaml  c270_hand_eye.yaml  camera_info.yaml  demo.yaml  fod.yaml  hand_eye.yaml  hand_eye.yaml.example  handover.yaml  robot_poses.yaml  runtime.yaml  staging_area.yaml  toolbox.yaml  topview_calib.yaml  vision.yaml  visual_servo.yaml
db_core/: CHANGELOG.md  __init__.py  client.py  repository.py  schema.py
docs/: RL_strategy.md  ai-setup.md  architecture.md  communication_diagram.drawio  conventions.md  db-schema.md  demo-collection-workflow.md  frames.md  glossary.md  hand_delivery.md  hardware.md  interfaces.md  isaac_lab_structure.md  logging.md  simulation.md
hal/: __init__.py  arm_interface.py  camera_interface.py  gripper_interface.py
interfaces/: CHANGELOG.md
mocks/: SPEC.md
notebooks/: train_top_view_v2.ipynb
plc_core/: CHANGELOG.md  __init__.py  client.py  config.py  modbus_client.py  states.py
ros2_ws/src/dashboard/: package.xml  setup.py
ros2_ws/src/dashboard/dashboard/: dashboard_node.py
ros2_ws/src/dashboard/dashboard_static/: index.html
ros2_ws/src/db/: README.md  package.xml  setup.py
ros2_ws/src/db/db/: __init__.py  db_service_node.py  fod_monitor_node.py  intent_status_mapping.py  intent_status_simulator_node.py  plc_state_publisher.py  repository.py
ros2_ws/src/db/test/: __init__.py  test_intent_status_mapping.py  test_plc_state_publisher.py  test_repository.py
ros2_ws/src/demo/: README.md  package.xml  setup.py
ros2_ws/src/demo/demo/: _paths.py  _trigger_args.py  demo_trigger.py  ui_server.py
ros2_ws/src/demo/demo/ui_static/: index.html
ros2_ws/src/demo/launch/: demo.launch.py
ros2_ws/src/demo/test/: test_seed_demo_db.py  test_trigger_args.py
ros2_ws/src/handpose_ros/: package.xml  requirements.txt  setup.cfg  setup.py
ros2_ws/src/handpose_ros/handpose_ros/: mediapipe_hands_node.py
ros2_ws/src/handpose_ros/scripts/: mediapipe_hands_wrapper.sh
ros2_ws/src/interfaces/: CHANGELOG.md  CMakeLists.txt  package.xml
ros2_ws/src/interfaces/action/: ExecutePhase.action  Grasp.action  MoveToPose.action  PlaceAtStaging.action  Release.action  ReturnToSlot.action
ros2_ws/src/interfaces/msg/: Intent.msg  MarkerMap.msg  PLCStatus.msg  RobotStatus.msg  ToolStatus.msg
ros2_ws/src/interfaces/srv/: CheckToolFeasibility.srv  GripperSetPosition.srv  LogEvent.srv  UpdateDrawerState.srv  UpdateToolStatus.srv
ros2_ws/src/motion/: README.md  package.xml  setup.py
ros2_ws/src/motion/config/: gripper_node.yaml
ros2_ws/src/motion/launch/: bringup_e0509_with_gripper.launch.py
ros2_ws/src/motion/motion/: gripper_conversion.py  gripper_node.py  hand_orientation_test.py  home_on_start.py  rviz_joint_state_merger_node.py  sequence_engine.py  tool_action_server.py  toolbox_scan_node.py  toolbox_seq_runner.py
ros2_ws/src/motion/scripts/: gripper_node  home_on_start  rviz_joint_state_merger  tool_action_server  toolbox_seq_runner
ros2_ws/src/motion/urdf/: e0509_with_gripper.urdf
ros2_ws/src/orchestrator/: package.xml  setup.cfg  setup.py
ros2_ws/src/orchestrator/launch/: system.launch.py
ros2_ws/src/orchestrator/orchestrator/: blackboard.py  orchestrator_node.py  unit_action_server.py
ros2_ws/src/orchestrator/orchestrator/bt_nodes/: check_feasibility.py  fault_handler.py  fetch_tool.py  place_on_hand_bt.py  return_tool.py  run_action.py  scan_layer.py  set_moving.py
ros2_ws/src/orchestrator/test/: test_blackboard.py  test_bt_nodes.py
ros2_ws/src/plc/: README.md  package.xml  setup.py
ros2_ws/src/plc/config/: xgb_plc.yaml
ros2_ws/src/plc/environment/: plc_core_pythonpath.dsv  plc_core_pythonpath.sh
ros2_ws/src/plc/launch/: plc.launch.py
ros2_ws/src/plc/plc/: __init__.py  plc_node.py
ros2_ws/src/plc/test/: test_plc_safety_contract.py
ros2_ws/src/vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/vision/launch/: hand_detection.launch.py  handeye_calibration.launch.py  realsense_bringup.launch.py  vision_pipeline.launch.py
ros2_ws/src/vision/model_library/: README.md
ros2_ws/src/vision/model_library/gripper_model/v1/: model_info.yaml
ros2_ws/src/vision/model_library/top_view_model/v1/: model_info.yaml
ros2_ws/src/vision/model_library/top_view_model/v2/: model_info.yaml
ros2_ws/src/vision/model_library/top_view_model/v3/: model_info.yaml
ros2_ws/src/vision/model_library/top_view_model/v3-2/: model_info.yaml
ros2_ws/src/vision/model_library/top_view_model/v3-seg/: model_info.yaml
ros2_ws/src/vision/model_library/top_view_model/v4/: model_info.yaml
ros2_ws/src/vision/test/: conftest.py  test_context_builder.py  test_hand_eye_loader.py  test_marker_scan_node.py  test_realsense_streams.py  test_tracker.py
ros2_ws/src/vision/vision/: camera_node.py  context_builder.py  cv_bridge_compat.py  gripper_marker_scan_node.py  hand_eye_loader.py  hand_node.py  hand_viz_node.py  marker_scan_node.py  pose_node.py  tracker_node.py  yolo_node.py
scripts/: augment_handeye_data.py  c270_capture.py  c270_handeye_autocapture.py  c270_handeye_capture.py  c270_handeye_collect.py  c270_intrinsic_calib.py  c270_preview.py  c270_tcp_center_calib.py  calib_poses.py  calibrate_hand_eye.sh  camera_capture.py  collect_handeye_data.py  compute_fk_and_calibrate.py  compute_hand_eye.py  compute_handeye_opencv.py  env.sh  handeye_calib_motion.py  handeye_calib_poses_checklist.txt  handeye_pose_checker.py  handover_calib.py  install_python_deps.sh  launch_robot.sh  point_collect.py  seed_demo_db.py  teach_collect.py  test_infer_topview.py  test_marker_scan.py  topview_collect.py  train_yolo.py  validate_handeye.py  verify_camera.py  verify_grasp_coords.py
tools/: show_roi_coords.py
unit_actions/: CHANGELOG.md  __init__.py  grasp.py  move_to_pose.py  release.py  (+7 more)
(+160 files in other folders)
